--- a/assets/css/navbar-main.css
+++ b/assets/css/navbar-main.css
@@ -1,3 +1,51 @@
+.pd-rl-5 {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.pd-rl-10 {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.mg-tb-5 {
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+.mg-b-1em {
+  margin-bottom: 1em;
+}
+.pd-r-5 {
+  padding-right: 5px;
+}
+.pd-l-5 {
+  padding-left: 5px;
+}
+.mg-tb-10 {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.mg-tb-5 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.mg-rl-5 {
+  margin-right: 5px;
+  margin-left: 5px;
+}
+.pd-l-10 {
+  padding-left: 10px;
+}
+.pd-r-10 {
+  padding-right: 10px;
+}
+.hr-primary {
+  border-color: #e74f36;
+}
+.hr-white {
+  border-color: #fff;
+}
+.box-green {
+  background-color: green;
+}
 #navbar-main {
   background: #e74f36;
   border-color: #e74f36;
