--- a/assets/css/admin-profil-ubah.css
+++ b/assets/css/admin-profil-ubah.css
@@ -43,17 +43,6 @@ body {
     .bio-control {
       text-align: center;
     }
-    .btn-tambah, .btn-tambah:active, .btn-tambah:focus {
-      text-transform: uppercase;
-      background-color: #e74f36;
-      color: #fff;
-      margin-bottom: 1em;
-    }
-    .btn-tambah:hover {
-      color: #e74f36;
-      background-color: #fff;
-      border: 1px solid #e74f36;
-    }
     .control {
       padding-left: .6em;
       text-align: left;
@@ -64,6 +53,11 @@ body {
     .control li {
       list-style-type: none;
       margin-bottom: .4em;
+      color: #333;
+    }
+    ul.control li a, ul.control li a:hover {
+      color: #333;
+      text-decoration: none;
     }
     .control li i {
       margin-right: .4em;
