--- a/assets/css/profil.css
+++ b/assets/css/profil.css
@@ -9,16 +9,6 @@ body {
   /*padding-bottom: 60px;*/
 }
 
-.clearfix:before,
-.clearfix:after {
-  content: " ";
-  display: table;
-}
-
-.clearfix:after {
-  clear: both;
-}
-
 .pd-rl-5 {
   padding-left: 5px;
   padding-right: 5px;
@@ -222,7 +212,8 @@ body {
   }
   .kost-item {
     border: 3px solid #e74f36;
-    padding: 0;
+    padding: 0px;
+    /*margin-bottom: 0px;*/
     text-align: center;
     position: relative;
   }
