--- a/assets/css/kosts.css
+++ b/assets/css/kosts.css
@@ -8,64 +8,8 @@ body {
   padding-top: 60px;
 }
 
-.clearfix:before,
-.clearfix:after {
-  content: " ";
-  display: table;
-}
-
-.clearfix:after {
-  clear: both;
-}
-
-.pd-rl-5 {
-  padding-left: 5px;
-  padding-right: 5px;
-}
-.pd-r-5 {
-  padding-right: 5px;
-}
-.pd-l-5 {
-  padding-left: 5px;
-}
-.pd-l-10 {
-  padding-left: 10px;
-}
-.pd-r-10 {
-  padding-right: 10px;
-}
-
-.hr-primary {
-  border-color: #e74f36;
-}
-.hr-white {
-  border-color: #fff;
-}
-#navbar-main {
-  background: #e74f36;
-  border-color: #e74f36;
-  border-radius: 0;
-  margin-bottom: 10px;
-}
-
-.navbar-brand {
-  padding: 0;
-}
-
-.logo-md {
-  height: 50px;
-  padding: 5px;
-  margin-left: 10px;
-}
-
-.logo-xs {
-  height: 50px;
-  padding: 5px;
-  margin-left: 10px;
-}
-
 #filter {
-  background: #d3d3d3;
+  background: #fff;
   /*margin-top: 60px;*/
   margin-bottom: 1em;
   padding-bottom: 10px;
@@ -90,7 +34,9 @@ body {
   margin-bottom: 10px;
   color: #e74f36;
 }
-
+#harga-min {
+  margin-bottom: 10px;
+}
 #cari-filter {
   border-radius: 40px;
   background: #e74f36;
